# Sustainable-NAS

./: README.md  requirements.txt
TiNAS/: settings.py  (+8 more)
intermittent-inference-library/: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  main.c  main_microbench.c  main_simulator.c
intermittent-inference-library/cnn/: cnn.c  cnn.h  cnn_add.c  cnn_add.h  cnn_add_intermittent.c  cnn_batchnorm.c  cnn_batchnorm.h  cnn_batchnorm_intermittent.c  cnn_buffers.c  cnn_buffers.h  cnn_common.h  cnn_conv_tiled_dw.c  cnn_conv_tiled_dw.h  cnn_conv_tiled_dw_intermittent.c  cnn_conv_tiled_std.c  cnn_conv_tiled_std.h  cnn_conv_tiled_std_intermittent.c  cnn_matops.c  cnn_matops.h  cnn_pool.c  cnn_pool.h  cnn_pool_intermittent.c  cnn_relu.c  cnn_relu.h  cnn_relu_intermittent.c  cnn_types.h  cnn_utils.c  cnn_utils.h
intermittent-inference-library/cnn/tests/: cnn_testbench_conv.c  cnn_testbench_conv.h  cnn_testbench_microbench.c  cnn_testbench_microbench.h  cnn_testbench_model.c  cnn_testbench_pool.c  cnn_testbench_pool.h
intermittent-inference-library/data/: model-contpow.h  model-intpow.h  test_model.h
intermittent-inference-library/data/cifar/: testmodel_contpow_cifar_capnoen_ts1.h  testmodel_contpow_cifar_capnoen_ts2.h  testmodel_contpow_cifar_capnoen_ts3.h  testmodel_intpow_cifar_cap001_ts1.h  testmodel_intpow_cifar_cap001_ts2.h  testmodel_intpow_cifar_cap001_ts3.h  testmodel_intpow_cifar_cap005_ts1.h  testmodel_intpow_cifar_cap005_ts2.h  testmodel_intpow_cifar_cap005_ts3.h  testmodel_intpow_cifar_cap01_ts1.h  testmodel_intpow_cifar_cap01_ts2.h  testmodel_intpow_cifar_cap01_ts3.h
intermittent-inference-library/fake-headers/: msp430.h
intermittent-inference-library/utils/: cost_models.txt  extfram.c  extfram.h  extfram_simulator.c  extract-cost-models.py  helper_functions.c  helper_functions.h  myuart.c  myuart.h  myuart_simulator.c  sleep_timer.c  sleep_timer.h  util_macros.h  voltage_monitor.c  voltage_monitor.h
intermittent-inference-library/verify/: verify_add.h  verify_add.py  verify_batchnorm.h  verify_batchnorm.py  verify_common.py  verify_depthwise_conv.h  verify_depthwise_conv.py  verify_pool.h  verify_pool.py  verify_relu.h  verify_relu.py  verify_standard_conv.h  verify_standard_conv.py
(+107 files in other folders)
